# adventofcode

./: README.md
2018/: .gitignore  Cargo.toml  README.md  download_inputs.py
2018/day06/: Cargo.toml
2018/days1-6_13-15/: Cargo.toml
2018/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day13.rs  day14.rs  day15.rs  day18.rs  day99.rs  lib.rs  main.rs  utils.rs
2019/: .gitignore  README.md  download_inputs.py
2019/day01/: Cargo.toml
2019/day02/: Cargo.toml
2019/day03/: Cargo.toml
2019/day04/: Cargo.toml
2019/day05/: Cargo.toml
2019/day06/: Cargo.toml
2019/day07/: Cargo.toml
2019/day08/: Cargo.toml
2019/day09/: Cargo.toml
2019/day10/: Cargo.toml
2019/day11/: Cargo.toml
2019/day12/: Cargo.toml
2019/day13/: Cargo.toml
2019/day14/: Cargo.toml
2019/day15/: Cargo.toml
2019/day16/: Cargo.toml  notes.rs
2019/day17/: Cargo.toml  map.txt
2019/day18/: Cargo.toml
2019/day19/: Cargo.toml
2019/day20/: Cargo.toml
2019/day21/: Cargo.toml
2019/day22/: Cargo.toml
2019/day22/src/: main.rs
2019/day23/: Cargo.toml
2019/day24/: Cargo.toml
2019/day24v2/: Cargo.toml
2019/day25/: Cargo.toml  commands.txt
2020/: .gitignore  README.md
2020/aoclib/: Cargo.toml
2020/aoclib/src/: lib.rs
2020/aocprep_src/: Cargo.toml
2020/day04/: Cargo.toml
2020/day05/: Cargo.toml
2021/: README.md
2021/day19/: Cargo.toml
2021/day19/src/: main.rs
2022/: README.md
2023/: .gitignore  README.md  aoc.toml
2024/: .gitignore  README.md  environment.yml
day01/: Cargo.toml
day02/: Cargo.toml
day03/: Cargo.toml
day05/: Cargo.toml
(+279 files in other folders)
