[package]
name = "day22"
version = "0.1.0"
authors = ["Janus <janus@insignificancegalore.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modinverse = "0.1.1"
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1.41"
