[package]
name = "aoclib"
version = "0.1.0"
authors = ["Janus <janus@insignificancegalore.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
toml = "0.5"
anyhow = "1.0"
thiserror = "1.0"
reqwest = {version="0.10.9", features=["blocking"]}
